benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_ModExpPow2_Add_iter5_error.log
=== Verification Error - Iteration 5 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExpPow2_Add.rs
Time: 2025-09-15 18:57:06

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error: invalid suffix `int` for number literal
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExpPow2_Add_impl.rs:119:16
    |
119 |     while nn > 0int
    |                ^^^^ invalid suffix `int`
    |
    = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `int` for number literal
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExpPow2_Add_impl.rs:125:19
    |
125 |         nn = nn - 1int;
    |                   ^^^^ invalid suffix `int`
    |
    = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExpPow2_Add_impl.rs:142:91
    |
142 |     invariant res as int % modz as int * (b as int % modz as int) == Exp_int(base as nat, exp - e + 1) % (modz as nat),
    |                                                                      -------              ^^^^^^^^^^^ expected `nat`, found `int`
    |                                                                      |
    |                                                                      arguments to this function are incorrect
    |
note: function defined here
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExpPow2_Add_impl.rs:5:9
    |
5   | spec fn Exp_int(x: nat, y: nat) -> nat
    |         ^^^^^^^         ------

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.

--------------------------------------------------------------------------------

Additional Output:
error: invalid suffix `int` for number literal
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExpPow2_Add_impl.rs:119:16
    |
119 |     while nn > 0int
    |                ^^^^ invalid suffix `int`
    |
    = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: invalid suffix `int` for number literal
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExpPow2_Add_impl.rs:125:19
    |
125 |         nn = nn - 1int;
    |                   ^^^^ invalid suffix `int`
    |
    = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExpPow2_Add_impl.rs:142:91
    |
142 |     invariant res as int % modz as int * (b as int % modz as int) == Exp_int(base as nat, exp - e + 1) % (modz as nat),
    |                                                                      -------              ^^^^^^^^^^^ expected `nat`, found `int`
    |                                                                      |
    |                                                                      arguments to this function are incorrect
    |
note: function defined here
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExpPow2_Add_impl.rs:5:9
    |
5   | spec fn Exp_int(x: nat, y: nat) -> nat
    |         ^^^^^^^         ------

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
